[package]
name = "bevy_curve_editor"
version = "0.1.0"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/lassade/bevy", branch = "curves-and-lerp" }
bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main" }

[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/lassade/bevy", branch = "curves-and-lerp" }
